--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "framer-motion": "^8.1.3",
     "gray-matter": "^4.0.3",
+    "iconoir-react": "^5.5.2",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "typescript": "^4.7.4"
