--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "framer-motion": "^8.1.3",
     "gray-matter": "^4.0.3",
     "iconoir-react": "^5.5.2",
+    "lottie-react": "^2.3.1",
     "next": "latest",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
@@ -26,8 +28,8 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
     "sass": "^1.57.1",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4"
   }
 }
